First implementation of Proprietaire